# csa-rust

./: .travis.yml  Cargo.toml  readme.md
fixtures/: stop_times.txt  stops.txt  trips.txt
src/: algo.rs  gtfs_structures.rs  lib.rs  main.rs  structures.rs
