[package]
name = "csa"
version = "0.1.0"
authors = ["Tristram Gräbener <tristramg@gmail.com>"]
edition = '2018'

[dependencies]
gtfs-structures = "0.13"
chrono = "0.4"
#regex = "1.3"
#lazy_static = "1.4"
itertools = "0.8"
#failure = "0.1"
cpuprofiler = "0.0.3"
structopt = "0.3"
structopt-derive = "0.3"
