[package]
name = "csa"
version = "0.1.0"
authors = ["Tristram Gräbener <tristramg@gmail.com>"]
edition = '2018'

[dependencies]
actix-web = "1.0"
gtfs-structures = "0.14"
chrono = {version = "0.4", features = ["serde"]}
itertools = "0.8"
cpuprofiler = "0.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
structopt-derive = "0.3"
