[package]
name = "csa"
version = "0.1.0"
authors = ["Tristram Gräbener <tristramg@gmail.com>"]
edition = '2018'

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
gtfs-structures = "0.21.0"
chrono = {version = "0.4", features = ["serde"]}
itertools = "0.9.0"
cpuprofiler = "0.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
structopt-derive = "0.4"
